--- a/platforms/documentation/docs/src/docs/userguide/redirects/writing_build_scripts.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/redirects/writing_build_scripts.adoc
@@ -17,41 +17,31 @@
 
 The initialization phase in the Gradle Build lifecycle finds the root project and subprojects included in your <<directory_layout#dir:project_root,project root directory>> using the settings file.
 
-image::author-gradle-6.png[]
-
 Then, for each project included in the settings file, Gradle creates a link:{javadocPath}/org/gradle/api/Project.html[`Project`] instance.
 
 Gradle then looks for a corresponding build script file, which is used in the configuration phase.
 
 == Build Scripts
 
-Every Gradle build comprises one or more *projects*; a _root_ project and _subprojects_.
+Gradle build scripts are written in either <<groovy_build_script_primer.adoc#groovy_build_script_primer, Groovy DSL>> or <<kotlin_dsl.adoc#kotdsl:kotlin_dsl, Kotlin DSL>> (domain-specific language).
+The build script is either a `\*.gradle` file in Groovy or a `*.gradle.kts` file in Kotlin.
 
-A project typically corresponds to a software component that needs to be built, like a library or an application.
-It might represent a library JAR, a web application, or a distribution ZIP assembled from the JARs produced by other projects.
-
-On the other hand, it might represent a thing to be done, such as deploying your application to staging or production environments.
-
-Gradle scripts are written in either Groovy DSL or Kotlin DSL (domain-specific language).
-
-A *build script* configures a *project* and is associated with an object of type link:{javadocPath}/org/gradle/api/Project.html[`Project`].
+A *build script* configures a project which is associated with an object of type link:{javadocPath}/org/gradle/api/Project.html[`Project`].
 
 image::author-gradle-4.png[Build,500,63,align="left"]
 
-As the build script executes, it configures `Project`.
-
-The build script is either a `\*.gradle` file in Groovy or a `*.gradle.kts` file in Kotlin.
+As the build script executes, it configures the `Project` object.
 
 IMPORTANT: _Build scripts_ configure `Project` objects and their children.
 
 == The `Project` object
 
-The `Project` object is part of the link:{javadocPath}/org/gradle/api/Project.html[Gradle API]:
+The `Project` object is part of the public Gradle APIs:
 
 - In the Groovy DSL, the `Project` object documentation is found link:{groovyDslPath}/org.gradle.api.Project.html[here].
 - In the Kotlin DSL, the `Project` object documentation is found link:{kotlinDslPath}/gradle/org.gradle.api/-project/index.html[here].
 
-Many top-level properties and blocks in a build script are part of the Project API.
+Many top-level properties and blocks in a build script are part of the link:{javadocPath}/org/gradle/api/Project.html[Project API].
 
 For example, the following build script uses the link:{groovyDslPath}/org.gradle.api.Project.html#org.gradle.api.Project:name[Project.name] property to print the name of the project:
 
@@ -163,6 +153,7 @@ include::sample[dir="snippets/plugins/simple/groovy/sub-project-a", files="build
 <5> Register and configure tasks.
 
 === 1. Apply plugins to the build
+
 Plugins are used to extend Gradle. They are also used to modularize and reuse project configurations.
 
 Plugins can be applied using the `PluginDependenciesSpec` plugins script block.
@@ -343,8 +334,6 @@ They allow lazy evaluation, meaning their values are calculated only when needed
 - **Providers**: A `Provider<T>` represents a value that is computed or retrieved lazily.
 Providers are often used with properties to defer value computation until necessary. This is especially useful for integrating dynamic, runtime values into your build.
 
-You can learn more about this in <<properties_providers.adoc#properties_and_providers,Understanding Gradle Types>>.
-
 [[sec:declaring_variables]]
 === Declare Variables
 
@@ -444,4 +433,4 @@ include::default-imports.txt[]
 [[sec:closures_as_the_last_parameter_in_a_method]]
 
 [.text-right]
-**Next Step:** <<tutorial_using_tasks.adoc#tutorial_using_tasks,Learn how to use Tasks>> >>
+**Next Step:** <<gradle_managed_types.adoc#gradle_types_intro,Learn about Gradle Managed Types>> >>
