--- a/platforms/documentation/docs/src/docs/userguide/optimizing-builds/configuration-cache/configuration_cache_status.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/optimizing-builds/configuration-cache/configuration_cache_status.adoc
@@ -17,7 +17,7 @@
 
 [WARNING]
 ====
-This feature is _not enabled by default_ and is currently incubating.
+This feature is _not enabled by default_.
 ====
 
 [[config_cache:plugins]]
